# coursework_4_Minin_ES

./: Readme.md  exept.py  main.py  pyproject.toml
files_with_vacancies/: hh_vacancies.json  super_job_vacancies.json
src/: abstract_vacancy_api.py  abstract_vacancy_data.py  interact_with_user.py  saving_information_vacancies.py  vacancies.py  vacancies_search_api.py
tests/: test_saving_information_vacancies.py  test_vacancies.py  test_vacancies_searh_api.py
